--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<!-- Astrea Barlow -->
     <title>Accessible Responsive Styling Practice</title>
     <link href="styles.css" rel="stylesheet">
 </head>
